--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Monitaur</title>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.0.16/css/bulma.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div id="app"></div>
